2008-03-29  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb, ext/oci8/oci8lib.c, ext/oci8/oci8.h:
	    When '--with-runtime-check' is passed to extconf.rb, oci8lib.so
	    is no longer linked to an Oracle client library at compilation
	    time. It tries to search the Oracle client library at runtime.
	* ext/oci8/bind.c: define OCI8::BindType::BinaryDouble when
	    oracle_client_version's value is 10g or later, not when SQLT_BDOUBLE
	    is declared. This is for runtime check.

2008-03-22  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/bind.c, ext/oci8/lob.c, ext/oci8/object.c, ext/oci8/oci8.h,
	  ext/oci8/oci8lib.c, ext/oci8/ocidatetime.c, ext/oci8/ocinumber.c,
	  ext/oci8/oradate.c, ext/oci8/stmt.c: add qualifier 'const' to
	    oci8_bind_*class_t values. These are read only.

2008-03-22  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/.: add apiwrap.[ch] to svn:ignore property.
	* ext/oci8/apiwrap.c.tmpl, ext/oci8/apiwrap.rb, ext/oci8/apiwrap.yml:
	    add alternative code if OCINumberSetPi(), OCINumberIsInt() is
	    not found.
	* ext/oci8/oci8.h: delete unused macros. add LIKELY and UNLIKELY
	    macros and use the former in oci8_get_errhp().
	* ext/oci8/oci8.h, ext/oci8/oci8lib.c: change the scope of
	    oci8_base_class to static.
	* ext/oci8/ocinumber.c: fix OraNumber#** and OraNumber#<=>. raise
	    exceptions when OraNumber#round_prec or OraNumber#shift is called
	    and the Oracle client version is 8.0.
	* test/test_oranumber.rb: add testcass for all OraNumber methods.

2008-03-19  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/ocinumber.c, lib/oci8/compat.rb, lib/oci8/object.rb
	  lib/oci8/oci8.rb, test/test_oci8.rb:
	    1. OCINumber, which is a new object in 2.0, become OraNumber.
	       This means OraNumber become a true numeric class.
	    2. Rdoc comments in ocinumber.c are fixed.

2008-03-08  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb, ext/oci8/oci8lib.c, ext/oci8/rowid.c:
	    rowid.c is deleted. OCIRowid is no longer in use.